--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
-DB_HOST=localhost
-DB_USER=your_username
-DB_PASSWORD=your_password
-DB_DATABASE=your_database
+DB_HOST=mysql-yannsteeve.alwaysdata.net
+DB_USER=373412_yann
+DB_PASSWORD=St17081960
+DB_DATABASE=yannsteeve_gestion_evenement
 
 PORT=3000
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET=Zt9#Xq2bD7Ky8Lm4Pw5Rn3Jf6Sv1Gh
 
-EMAIL_USER=your_email@example.com
-EMAIL_PASSWORD=your_email_password
+EMAIL_USER=mouendouyann08@gmail.com
+EMAIL_PASSWORD=Ys17081960
